<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activity.GameActivity">

    <ImageButton
        android:id="@+id/go_back"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/back_to_level_selector"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/return_icon"
        tools:ignore="DuplicateClickableBoundsCheck"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/locate"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/find_location"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/go_back"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/location_icon"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/gem"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gem_icon"
        android:contentDescription="@string/icon_of_gem" />

    <TextView
        android:id="@+id/gem_count"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="1000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/gem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gem"
        app:layout_constraintTop_toTopOf="@+id/gem" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:contentDescription="@string/attachment_summary_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:contentDescription="@string/main_picture"
                app:srcCompat="@drawable/church"
                tools:srcCompat="@drawable/church" />

            <LinearLayout
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:background="@drawable/bordervertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/text_2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/text_3"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/text_4"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/text_5"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/text_6"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/text_7"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/text_8"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/text_9"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/text_10"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

            </LinearLayout>


        </LinearLayout>
    </HorizontalScrollView>

    <ProgressBar
        android:id="@+id/progressB"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:max="99"
        android:progress="0"
        android:progressBackgroundTint="#FFFFFF"
        android:scaleY="2"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:textColorHint="#FFFFFF"
        app:boxStrokeColor="#00BCD4"
        app:hintTextColor="#FFFFFF"
        android:hint="@string/describe_the_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/horizontalScrollView"
        app:layout_constraintTop_toBottomOf="@+id/progressB">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:foreground="@drawable/border"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textStyle="italic" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/send"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/check_the_word"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout"
        app:srcCompat="@drawable/send_icon" />

    <ImageButton
        android:id="@+id/hint"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="#00FAFAFA"
        android:contentDescription="@string/give_a_hint"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout"
        app:srcCompat="@drawable/question_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>